<resources>
    <string name="app_name">NetBSChartof3InstitutionalInvestors</string>
    <string name="author_name">曾偉誌</string>

    <string name="date">日期</string>
    <string name="qfii">外資</string>
    <string name="brk">投信</string>
    <string name="it">自營</string>
    <string name="sum">合計</string>

    <string name="TSE">上市</string>
    <string name="OTC">上櫃</string>

    <string name="e">億</string>

    <string name="internet_error">無網路連線，請刷新重試。</string>
</resources>
