<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTSE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:alpha="1"
                android:background="@drawable/btn_style"
                android:text="@string/TSE"
                android:textColor="@drawable/btn_textcolor" />

            <Button
                android:id="@+id/btnOTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/btn_style"
                android:text="@string/OTC"
                android:textColor="@drawable/btn_textcolor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOuter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llTop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <SurfaceView
                    android:id="@+id/sfvGraph"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBotOuter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/ListViewTitle"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/date" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/qfii"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/brk"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/it"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/sum"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llBot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
                        android:id="@+id/dylistview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#96000000"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible">

        <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
            android:id="@+id/progressWithoutBg"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            app:mlpb_arrow_height="5dp"
            app:mlpb_arrow_width="10dp"
            app:mlpb_enable_circle_background="true"
            app:mlpb_progress_stoke_width="5dp"
            app:mlpb_progress_text_visibility="invisible"
            app:mlpb_show_arrow="true" />

    </LinearLayout>


</FrameLayout>
